fix search dropdown position on mobile

--- a/applications/primo/custom-styles.css
+++ b/applications/primo/custom-styles.css
@@ -229,7 +229,7 @@ body {
   margin-top: 1em;
   /* match the horizontal layout of #exlidSearchRibbon, as defined in http://uq-edu-primo.hosted.exlibrisgroup.com/primo_library/libweb/wro/primo_library_wro_61UQ_DEV_en_US.css */
   width: 55em;
-  padding-left: 1em;
+  padding-left: 1.7em;
   margin-left: auto;
   margin-right: auto; }
   #exlidHeaderSearchLimits select {
@@ -245,7 +245,9 @@ body {
   #exlidHeaderSearchLimits {
     display: inline-block;
     width: 86vw;
-    padding: 0; }
+    margin-top: 0px;
+    position: relative;
+    left: 3.5vw; }
     #exlidHeaderSearchLimits fieldset {
       width: 85vw; }
 
